--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diseñador Freelancer</title>
+    <link rel=”preload” href=”css/styles.css” as=”style”> 
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-    <h1>Jes&uacute;s Salinas Freelancer</h1>
+    <h1 class="titulo">Jes&uacute;s Salinas <span>Freelancer</span></h1>
     </header>
 
 <nav>
@@ -21,7 +23,7 @@
 </nav>    
 
 <section>
-    <h2>Diseño y Desarrollo Web Freelancer</h2>
+    <h2>Diseño y Desarrollo Web <span>Freelancer</span></h2>
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="88" height="88" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffc107" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
         <circle cx="12" cy="11" r="3" />
