--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 </main>
 
-<footer>
+<footer class="footer"">
     <p>Todos los derechos reservados. Jesus Salinas Freelancer</p>
 </footer>
 
